Fixing scrollbar

--- a/builds/d3/css/style.css
+++ b/builds/d3/css/style.css
@@ -81,6 +81,7 @@ text.axis-ticks{
 
 .dropdown-menu
 {
+    overflow-y: auto;
     max-height: 300px;
     border-top-right-radius: 0;
 }
